fix: return correct Location handlers
